syntax = "proto3";
import "status.proto";
package adsmsg;


// for oracle db
message DocMatchRecord {
	string eprint_bibcode = 1;
	string pub_bibcode = 2;
	double confidence = 3;
}

message DocMatchRecordList {
	repeated DocMatchRecord docmatch_records = 1;
	Status status = 2;
}
